<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="MainCommands_typ" Id="{dc2a4f5e-f09b-4e87-82b1-79343e5d1394}">
    <Declaration><![CDATA[TYPE MainCommands_typ :
    STRUCT

        Enable  : BOOL; // Enables Movers & Collision Avoidance, activates M1 Detection
        Start   : BOOL; // Issues initial command, starts motion
        Stop    : BOOL; // Stops movers, deregisters movers from all objectives	
        Disable : BOOL; // Disables Movers, Ungroups Movers

    END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>