<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="MotionParameters_typ" Id="{bd3dfc46-8034-4584-b9a8-07f88efb1905}">
    <Declaration><![CDATA[TYPE MotionParameters_typ :
    STRUCT

        Jerk         : LREAL;                           // mm/s3
        Acceleration : LREAL;                           // mm/s2
        Deceleration : LREAL;                           // mm/s2
        Velocity     : LREAL;                           // mm/s
        Direction    : Tc3_Mc3Definitions.MC_Direction; // MC_Direction
		Gap			 : LREAL;							// mm
		GapMode		 : MC_GAP_CONTROL_MODE := MC_GAP_CONTROL_MODE.mcGapControlModeGroupDefault; // default to mode defined in collision avoidance object

    END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>